Make sure there is a gap after code blocks
This is evident if there is a heading immediately after a code block.

--- a/static/css/elegant.css
+++ b/static/css/elegant.css
@@ -306,6 +306,9 @@ td.code {
     border-radius: 3px 0 0 3px;
     color: #657b83;
 }
+div.highlight {
+    margin-bottom: 20px;
+}
 /* Tags */
 .list-of-tags {
     font-family: 'Helvetica Neue', Helvetica, Arial, Sans-Serif;
